--- a/.github/workflows/Build.yaml
+++ b/.github/workflows/Build.yaml
@@ -72,14 +72,20 @@ jobs:
           disable_globbing: true
           commit_message: "🤖 Updates screenshots"
 
-      # Just for testing, do not merge
-      - name: Build release variant including baseline profile generation
-        run: ./gradlew :app:assembleDemoRelease
+      # Run local tests after screenshot tests to avoid wrong UP-TO-DATE. TODO: Ignore screenshots.
+      - name: Run local tests
+        if: always()
+        run: ./gradlew testDemoDebug :lint:test
+
+      # Replace task exclusions with `-Pandroidx.baselineprofile.skipgeneration` when
+      # https://android-review.googlesource.com/c/platform/frameworks/support/+/2602790 landed in a
+      # release build
+      - name: Build all build type and flavor permutations including baseline profiles
+        run: ./gradlew :app:assemble
              -Pandroid.testInstrumentationRunnerArguments.androidx.benchmark.enabledRules=baselineprofile
              -Pandroid.testoptions.manageddevices.emulator.gpu="swiftshader_indirect"
              -Pandroid.experimental.testOptions.managedDevices.emulator.showKernelLogging=true
              -Pandroid.experimental.androidTest.numManagedDeviceShards=1
-             -Pandroid.experimental.testOptions.managedDevices.maxConcurrentDevices=1
 
       - name: Upload build outputs (APKs)
         uses: actions/upload-artifact@v4
