Enable nightly builds and revert Build.yaml
Change-Id: Id9899cae3aaa6b2a4d37c41c1725b03b4dcf9779

--- a/.github/workflows/Nightly.yaml
+++ b/.github/workflows/Nightly.yaml
@@ -1,10 +1,8 @@
-name: Build
+name: Nightly
 
 on:
-  push:
-    branches:
-      - main
-  pull_request:
+  schedule:
+    - cron:  '0 5 * * *'
 
 concurrency:
   group: build-${{ github.ref }}
@@ -76,19 +74,15 @@ jobs:
       - name: Run local tests
         if: always()
         run: ./gradlew testDemoDebug :lint:test
+
       # Replace task exclusions with `-Pandroidx.baselineprofile.skipgeneration` when
       # https://android-review.googlesource.com/c/platform/frameworks/support/+/2602790 landed in a
       # release build
-      - name: Build all build type and flavor permutations
-        run: ./gradlew :app:assemble :benchmarks:assemble
-          -x pixel6Api33ProdNonMinifiedReleaseAndroidTest
-          -x pixel6Api33ProdNonMinifiedBenchmarkAndroidTest
-          -x pixel6Api33DemoNonMinifiedReleaseAndroidTest
-          -x pixel6Api33DemoNonMinifiedBenchmarkAndroidTest
-          -x collectDemoNonMinifiedReleaseBaselineProfile
-          -x collectDemoNonMinifiedBenchmarkBaselineProfile
-          -x collectProdNonMinifiedReleaseBaselineProfile
-          -x collectProdNonMinifiedBenchmarkBaselineProfile
+      - name: Build all build type and flavor permutations including baseline profiles
+        run: ./gradlew :app:assemble
+             -Pandroid.testInstrumentationRunnerArguments.androidx.benchmark.enabledRules=baselineprofile
+             -Pandroid.testoptions.manageddevices.emulator.gpu="swiftshader_indirect"
+             -Pandroid.experimental.testOptions.managedDevices.emulator.showKernelLogging=true
 
       - name: Upload build outputs (APKs)
         uses: actions/upload-artifact@v4
